add mock scripts for analyzer
